setting up to check if it works

--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>COMPOZ</title>
+    <link rel="stylesheet" href="style.css"></link>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+</head>
+<body>
+    <div id="background">
+        <div id="title">
+            THE COMPOS ARE COMING
+        </div>
+        <div id="timer_container">
+            <div id="days">
+                <div id="days_in">
+                    10
+                </div>
+                days
+            </div>
+            <div id="hours">
+                <div id="hours_in">
+                    3
+                </div>
+                Hours
+            </div>
+            <div id="minutes"></div>
+            <div id="seconds"></div>
+        </div>
+    </div>
+</body>
+</html>
