--- a/index.html
+++ b/index.html
@@ -41,5 +41,14 @@
             </div>
         </div>
     </div>
+    <div>
+        <div class="timebox" id="totalseconds">
+            <div>
+                A LOT
+            </div>
+            seconds
+            
+        </div>
+    </div>
 </body>
 </html>
